<resources>
    <string name="app_name">Real Time Weather Location APP</string>
    <string name="application_details_description">This application is created by TOMA Victoria and SILITRĂ Mihai-Andrei dedicated for Real Time Weather Location Traffic System, carried out under their draft license.</string>
    <string name="chosen_device">You choose </string>
    <string name="auto_selected">Auto selected</string>
    <string name="google_maps">Google Maps</string>
    <string name="region_dots">Region:</string>
    <string name="MSG_REGION_START">Region:</string>
    <string name="change_the_map_type">Change the map type.</string>
    <string name="active_track_location">Active track location.</string>
    <string name="the_current_region_weather">The current region weather.</string>
    <string name="no_gps_data">No GPS data.</string>
    <string name="no_gps_data_no_send">No GPS data available. Can\'t send data to database.</string>
    <string name="active_location">Turn on location.</string>
    <string name="grant_location_permission">Please grant permission to location.</string>
    <string name="image_description_predictions">Predictions</string>
    <string name="the_center_of_the_map">The center of the map</string>
    <string name="terminal">Terminal</string>
    <string name="development">Development</string>
    <string name="development_mode">Development mode.</string>
    <string name="first_status_in_development_mode">Send custom and valid data to database using the above fields.</string>
    <string name="complete_all_fields">All fields must be completed!</string>
    <string name="coordinates_hint">47.640323 26.244470</string>
    <string name="code_hint">code</string>
    <string name="temperature_hint">temp</string>
    <string name="humidity_hint">hum</string>
    <string name="air_hint">airQ</string>
    <string name="send_to_database">Send to DataBase</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="status">Status:</string>
    <string name="received">Received:</string>
    <string name="message_to_send">Message to send:</string>
    <string name="message_to_send_hint">get data</string>
    <string name="send_command">Send command</string>
    <string name="received_message">Message received.</string>
    <string name="message_with_time_placeholder">[%1$s] %2$s</string>
    <string name="commands">Commands</string>
    <string name="expand">EXPAND</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="stefan_cel_mare_university_suceava">Stefan cel Mare University Suceava</string>
    <string name="application_details">Application details</string>
    <string name="fiesc">FIESC</string>
    <string name="Y2020">2020</string>
    <string name="default_bluetooth_device">HC-05</string>
    <string name="bluetooth_not_available">Bluetooth is not available!</string>
    <string name="bluetooth_is_off">Bluetooth is OFF</string>
    <string name="bluetooth_is_on">Bluetooth is ON</string>
    <string name="choose_the_bluetooth_device">Choose the bluetooth device</string>
    <string name="go_to_bluetooth_settings">Go to bluetooth settings</string>
    <string name="no_paired_devices">No paired devices!</string>
    <string name="please_select_one_device">Please select one device!</string>
    <string name="connected_to_placeholder_device">Connected to %1$s.</string>
    <string name="connecting_to_placeholder_device">Connecting to %1$s…</string>
    <string name="disconnected_from_placeholder_device">Disconnected from %1$s.</string>
    <string name="connection_to_bluetooth_device">Connecting to bluetooth device.</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="need_to_connect">You need to connect to a bluetooth device!</string>
    <string name="something_wrong_with_bluetooth_name">Something wrong happened when accessed device name.</string>
    <string name="bluetooth_commands_title">Bluetooth commands to send:</string>
    <string name="not_connected">"Not connected!"</string>
    <string name="rw_failed">Read/Write to %1$s failed!</string>
    <string name="closing_bt_communication">Closing the bluetooth communication.</string>
    <string name="bluetooth_device_offline_no_send">Bluetooth device is OFFLINE.\nGo to main screen if you want to send data.</string>
    <string name="stop_bluetooth_service_first">Bluetooth service is active. If you want to close the database service, please stop the Bluetooth service.</string>
    <string name="no_gps_data_without_service">You can\'t close the location service because the GPS module didn\'t send any location yet.</string>
    <string name="data_base">DataBase</string>
    <string name="show_data_base">Show DataBase content</string>
    <string name="hide_data_base">Hide DataBase content</string>
    <string name="write_command">write here the command</string>
    <string name="reply_from">Reply from</string>
    <string name="notification_dangers_title">You are near dangerous places!</string>
    <string name="danger_notification_region">You are in a dangerous region!</string>
    <string name="danger_near_regions">Near regions presents the following dangers:</string>
    <string name="invalid_coordinates">Invalid coordinates! Must be as hint format, latitude between -90:90 and longitude between -180:180</string>
    <string name="invalid_code">Invalid code. Must be between 100 and 499.</string>
    <string name="invalid_temperature">Invalid temperature. Must be between -50 and 50.</string>
    <string name="invalid_humidity">Invalid humidity. Must be between 0 and 100.</string>
    <string name="invalid_air">Invalid air. Must be between 0 and 100.</string>
    <string name="invalid_data">Invalid data!</string>
    <string name="valid_data">Sent data to database.</string>
    <string name="region">Region</string>
    <string name="weather_dots">weather: </string>
    <string name="danger_dots">danger: </string>
    <string name="temperature_label">Temperature</string>
    <string name="temperature">Temperature:</string>
    <string name="temperature_space_dots">"Temperature: "</string>
    <string name="temperature_dots">Temperature:</string>
    <string name="temp_dots">temperature: </string>
    <string name="float_temperature_celsius_placeholder">%1$.1f\u2103</string>
    <string name="int_temperature_celsius_placeholder">%1$d\u2103</string>
    <string name="humidity_label">Humidity</string>
    <string name="humidity">Humidity:</string>
    <string name="humidity_dots">Humidity:</string>
    <string name="humidity_space_dots">"Humidity: "</string>
    <string name="_humidity_dots">humidity: </string>
    <string name="air_space_dots">"Air: "</string>
    <string name="air_quality">Air quality:</string>
    <string name="air_dots">air: </string>
    <string name="speed_dots">Speed:</string>
    <string name="speed_space_dots">"Speed: "</string>
    <string name="speed_label">Speed</string>
    <string name="direction_dots">Direction:</string>
    <string name="direction_space_dots">"Direction: "</string>
    <string name="direction_label">Direction</string>
    <string name="pollution_dots">Pollution:</string>
    <string name="pollution_label">Pollution</string>
    <string name="weather_sunny">Sunny</string>
    <string name="weather_sun">Sun</string>
    <string name="weather_heat">Heat</string>
    <string name="weather_soft_rain">Soft rain</string>
    <string name="weather_moderate_rain">Moderate rain</string>
    <string name="weather_torrential_rain">Torrential rain</string>
    <string name="weather_soft_wind">Soft wind</string>
    <string name="weather_moderate_wind">Moderate wind</string>
    <string name="weather_torrential_wind">Torrential wind</string>
    <string name="weather_soft_snow_fall">Soft snow fall</string>
    <string name="weather_moderate_snow_fall">Moderate snow fall</string>
    <string name="weather_massive_snow_fall">Massive snow fall</string>
    <string name="weather_sunny_ro">Însorit</string>
    <string name="weather_sun_ro">Soare</string>
    <string name="weather_heat_ro">Caniculă</string>
    <string name="weather_soft_rain_ro">Ploaie ușoară</string>
    <string name="weather_moderate_rain_ro">Ploaie moderată</string>
    <string name="weather_torrential_rain_ro">Ploaie torențială</string>
    <string name="weather_soft_wind_ro">Vânt ușor</string>
    <string name="weather_moderate_wind_ro">Vânt moderat</string>
    <string name="weather_torrential_wind_ro">Vânt torențial</string>
    <string name="weather_soft_snow_fall_ro">Ninsoare ușoară</string>
    <string name="weather_moderate_snow_fall_ro">Ninsoare moderată</string>
    <string name="weather_massive_snow_fall_ro">Ninsoare masivă</string>
    <string name="float_percent_placeholder">%1$.1f%%</string>
    <string name="int_percent_placeholder">%1$d%%</string>
    <string name="clear">CLEAR</string>
    <string name="waiting_for_data">Waiting for data…</string>
    <string name="message_sent">Message sent.</string>
    <string name="loading">Loading…</string>
    <string name="loading_points">…</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait!</string>
    <string name="close">Close</string>
    <string name="no_available">No available!</string>
    <string name="no_message">No messages.</string>
    <string name="no_data">No data.</string>
    <string name="none">none</string>
    <string name="preference_default_device_placeholder">Default device is %1$s</string>
    <string name="preference_value_string_placeholder">Value is %1$s</string>
    <string name="preference_value_string_slash_placeholder">Value is &#47;%1$s</string>
    <string name="bluetooth_device">Bluetooth Device</string>
    <string name="bluetooth_main_device">Main device</string>
    <string name="bluetooth_receive_delimiter">Bluetooth receive delimiter</string>
    <string name="bluetooth_receive_state_delimiter">Bluetooth receive state delimiter</string>
    <string name="maps_default_zoom">Default map zoom</string>
    <string name="maps_max_zoom_region">Max region zoom</string>
    <string name="preference_bluetooth_key">RTWL@BLUETOOTH_SETTINGS_KEY</string>
    <string name="preference_google_maps_key">RTWL@GOOGLE_MAPS_SETTINGS_KEY</string>
    <string name="bluetooth_main_device_key">RTWL@MAIN_DEVICE_KEY</string>
    <string name="bluetooth_receive_delimiter_key">RTWL@BLUETOOTH_RECEIVE_DELIMITER_KEY</string>
    <string name="bluetooth_receive_state_delimiter_key">RTWL@BLUETOOTH_RECEIVE_STATE_DELIMITER_KEY</string>
    <string name="maps_default_zoom_key">RTWL@MAP_DEFAULT_ZOOM_KEY</string>
    <string name="maps_max_zoom_region_key">RTWL@MAX_ZOOM_REGION_KEY</string>
    <string name="BLUETOOTH_COMMANDS_LIST">-1\t\t|\t\trs\t\t\t|\t\treset\nSoft reset Arduino\n------------------------------------\n
                     0\t\t|\t\tgr\t\t|\t\tping\nGet response from Arduino\n------------------------------------\n
                     1\t\t|\t\tgd\t\t|\t\tget data\nGet sensors value\n------------------------------------\n
                     2\t\t|\t\tpd\t\t|\t\tproxy fail\nWarn proxy sensor failure\n------------------------------------\n
                     3\t\t|\t\tgc\t\t|\t\tget coordinates\nSet Arduino to send GPS coordinates every second\n------------------------------------\n
                     4\t\t|\t\tdgc\t\t|\t\tdisable get coordinates\nDisable get coordinates feature\n------------------------------------\n</string>
    <string name="RTWL_system_started">RTWL System started\n</string>
    <string name="Arduino_is_active">Arduino is active.\n</string>
    <string name="BT_MSG_ERROR">An error occurred to Arduino microprocessor\n</string>
    <string name="BT_MSG_GPS_NOT_WORKING">GPS is not working!\n</string>
    <string name="BT_MSG_INVALID_GPS">Invalid data from GPS\n</string>
</resources>