<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/bluetooth_device">

        <EditTextPreference
            app:defaultValue="@string/default_bluetooth_device"
            app:key="@string/bluetooth_main_device_key"
            app:title="@string/bluetooth_main_device"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:entries="@array/bluetooth_receive_delimiter_entries"
            app:entryValues="@array/bluetooth_receive_delimiter_values"
            app:title="@string/bluetooth_receive_delimiter"
            app:key="@string/bluetooth_receive_delimiter_key"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/bluetooth_receive_state_delimiter_entries"
            app:entryValues="@array/bluetooth_receive_state_delimiter_values"
            app:title="@string/bluetooth_receive_state_delimiter"
            app:key="@string/bluetooth_receive_state_delimiter_key"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/google_maps">

        <EditTextPreference
            app:key="@string/maps_default_zoom_key"
            app:title="@string/maps_default_zoom"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/maps_max_zoom_region_key"
            app:title="@string/maps_max_zoom_region"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>