<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".TerminalActivity">

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="@dimen/dim_0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/connected_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_16dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <LinearLayout
        android:id="@+id/test_container"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/connected_device"
        app:layout_constraintBottom_toTopOf="@id/status">

        <EditText
            android:id="@+id/coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:autofillHints="@string/coordinates_hint"
            android:hint="@string/coordinates_hint"
            android:maxLines="1"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:layout_weight="1"
                android:hint="@string/code_hint"
                android:maxLines="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:layout_weight="1"
                android:hint="@string/temperature_hint"
                android:maxLines="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_marginEnd="@dimen/dim_8dp"
                android:layout_weight="1"
                android:hint="@string/humidity_hint"
                android:maxLines="1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/air"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8dp"
                android:layout_weight="1"
                android:hint="@string/air_hint"
                android:maxLines="1"
                android:textAlignment="center" />

        </LinearLayout>

        <Button
            android:id="@+id/send_test_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:background="@drawable/btn_rounded_8dp_dark_gray"
            android:text="@string/send_to_database" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/terminal_container"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_16dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/connected_device"
        app:layout_constraintBottom_toTopOf="@id/status">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/received" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dim_4dp"
            android:background="@drawable/border_dark_gray"
            android:overScrollMode="never"
            android:padding="@dimen/dim_4dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <TextView
                android:id="@+id/receive_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_16dp"
            android:text="@string/message_to_send" />

        <EditText
            android:id="@+id/message_to_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_to_send_hint"
            android:inputType="textNoSuggestions" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8dp"
            android:background="@drawable/btn_rounded_8dp_dark_gray"
            android:text="@string/send" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim_0dp"
            android:layout_weight="3"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintBottom_toTopOf="@id/status"
        app:layout_constraintEnd_toEndOf="@id/disconnect"
        app:layout_constraintStart_toStartOf="@id/disconnect" />

    <TextView
        android:id="@+id/status"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/dim_16dp"
        app:layout_constraintBottom_toTopOf="@id/disconnect"
        app:layout_constraintEnd_toEndOf="@id/disconnect"
        app:layout_constraintStart_toStartOf="@id/disconnect" />

    <Button
        android:id="@+id/disconnect"
        android:onClick="goToMainActivity"
        android:layout_width="@dimen/dim_0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_16dp"
        android:background="@drawable/btn_rounded_8dp_dark_gray"
        android:text="@string/disconnect"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>