<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleMapsActivity">

    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:elevation="@dimen/dim_16dp"
        android:visibility="visible"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textAlignment="center"
            android:textSize="@dimen/size_24sp"
            android:layout_marginTop="@dimen/dim_128dp"/>
        <TextView
            android:id="@+id/loading_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_points"
            android:textAlignment="center"
            android:textSize="@dimen/size_16sp"
            android:layout_marginTop="@dimen/dim_16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_wait"
            android:textAlignment="center"
            android:textSize="@dimen/size_16sp"
            android:layout_marginBottom="@dimen/dim_16dp"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progress"/>
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>